<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015 Google Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.android.launcher3.views.ButtonPreference
        android:key="pref_icon_badging"
        android:title="@string/icon_badging_title"
        android:persistent="false"
        android:widgetLayout="@layout/notification_pref_warning" >
        <intent android:action="android.settings.NOTIFICATION_SETTINGS">
            <!-- This extra highlights the "Allow icon badges" field in Notification settings -->
            <extra
                android:name=":settings:fragment_args_key"
                android:value="notification_badging" />
        </intent>
    </com.android.launcher3.views.ButtonPreference>

    <SwitchPreference
        android:key="pref_add_icon_to_home"
        android:title="@string/auto_add_shortcuts_label"
        android:summary="@string/auto_add_shortcuts_description"
        android:defaultValue="true"
        android:persistent="true"
        />

    <SwitchPreference
        android:key="pref_allowRotation"
        android:title="@string/allow_rotation_title"
        android:defaultValue="@bool/allow_rotation"
        android:persistent="true"
        />
<!-- add by cuixiangwen 2019/01/04 start  -->      
    <SwitchPreference
        android:key="wallpaper_scrolls_with_main_screen"
        android:title="@string/wallpaper_scrolls_title"
        android:summaryOn="@string/wallpaper_scrolls_on"
        android:summaryOff="@string/wallpaper_scrolls_off"
        android:defaultValue="true"
        android:persistent="true"
        />
        
    <SwitchPreference
        android:key="notification_bar_display"
        android:title="@string/notification_bar_display_title"
        android:summaryOn="@string/notification_bar_display_off"
        android:summaryOff="@string/notification_bar_display_on"
        android:defaultValue="true"
        android:persistent="true"
        />

    <SwitchPreference
        android:key="notification_bar_transparency"
        android:title="@string/notification_bar_transparency_title"
        android:summaryOn="@string/notification_bar_transparency_on"
        android:summaryOff="@string/notification_bar_transparency_off"
        android:defaultValue="true"
        android:persistent="true"
        />

<!-- add by cuixiangwen 2019/01/04 end  -->          

    <SwitchPreference
        android:key="pref_allow_searchwidght"
        android:title="@string/pref_allow_searchwidght"
        android:defaultValue="true"
        android:persistent="true"
        />       
<!-- add by cuixiangwen 2019/01/10 start  -->               
    <ListPreference
        android:key="folder_preview"
        android:title="@string/folder_preview_title"
        android:summary="%s"
        android:entries="@array/folder_preview_names"
        android:entryValues="@array/folder_preview_values"
        android:defaultValue="grid"
        />
<!-- add by cuixiangwen 2019/01/10 end  --> 
    <ListPreference
        android:key="pref_override_icon_shape"
        android:title="@string/icon_shape_override_label"
        android:summary="%s"
        android:entries="@array/icon_shape_override_paths_names"
        android:entryValues="@array/icon_shape_override_paths_values"
        android:defaultValue=""
        android:persistent="false" />

</PreferenceScreen>
